--- a/calendar.html
+++ b/calendar.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <link rel = "stylesheet" href = "style.css"/>
     <link rel = "stylesheet" href =  "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"/>
-    <script src="calendar.js"></script>
+    <script type="module" src="/calendar.js"></script>
     
   </head>
     
